--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@
 .border-opacity {
   border-right: rgba(0, 0, 0, 0.2) 1px solid;
 }
+
+.toggle-menu-bg {
+  background-color: rgba(0, 0, 0, 0.3);
+}
